<resources>
    <string name="app_name">Cinematic</string>
    <string name="error_message">Error loading the movie data. Please try again</string>
    <string name="movie_poster">Poster of the movie</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="action_popular">Popular</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_upcoming">Upcoming</string>
    <string name="release_date">Release Date:</string>
    <string name="avg_rating">Average Rating:</string>

    <string name="detail_video_thumbnail">Video Thumbnail</string>

    <string name="button_on">Favorited</string>
    <string name="button_off">Favorite</string>

    <string name="filter_menu">Menu</string>

    <string name="review_author">Author: </string>
    <string name="open_review">Open Review</string>
    <string name="not_available_resource">There\'s no info available for this movie yet.</string>
    <string name="not_available">Not available</string>
    <string name="click_to_expand">Click text to expand review</string>
    <string name="action_search">Search</string>
    <string name="added_to_favorites">Added to your favorites</string>
    <string name="search_for_movie">Search for Movies</string>
    <string name="SAVE_SELECTION_KEY" translatable="false">SAVE_SELECTION_KEY</string>
    <string name="SAVE_POSITION_KEY" translatable="false">SAVE_POSITION_KEY</string>
    <string name="title_activity_actor_details">ActorDetailsActivity</string>

    <string name="birthplace">Birthplace:</string>
    <string name="actor_name">Name:</string>
    <string name="birthdate">Birthdate:</string>

    <string name="no_network_connection">You are not connected to the internet</string>

    <!-- Content descriptions for images -->
    <string name="backdrop_description">Movie Backdrop Image</string>
    <string name="movie_image_main">Movie Poster Image</string>
    <string name="actor_image_description">Actor Profile Image</string>
    <string name="drawer_menu__movies">Movies</string>
    <string name="drawer_menu__tv_shows">TV Shows</string>
    <string name="drawer_menu__actors">Actors</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="divider_dot">•</string>
    <string name="genre_not_available">n/a</string>
    <string name="overview">Overview</string>
    <string name="featured_crew">Featured Crew</string>
    <string name="tv_show_data">TV Show Data</string>
    <string name="status">Status</string>
    <string name="last_air_date">Latest Episode</string>
    <string name="first_air_date">First Air Date</string>
    <string name="runtime">Runtime</string>
    <string name="genres">Genres</string>
    <string name="number_of_seasons">Number of Seasons</string>
    <string name="number_of_episodes">Number of Episodes</string>
    <string name="intent_key_tv_show">INTENT_KEY_TV_SHOW</string>
    <string name="runtime_minutes">Minutes</string>

    <string name="runtime_today">(Today)</string>
    <string name="creator">Creator</string>
    <string name="seasons">Season</string>
    <string name="select_a_season_to_show_information">Select a season to show information</string>
    <string name="view_episodes">View Episodes</string>
    <string name="season_h1_pane">Season %d</string>
    <string name="nr_episodes">%d Episodes</string>
    <string name="intent_key_tvshow">INTENT_KEY_FULL_TVSHOW</string>
    <string name="intent_key_selected_season">INTENT_KEY_SELECTED_SEASON</string>
    <string name="intent_key_backdrop">INTENT_KEY_BACKDROP</string>
    <string name="intent_key_season_id">INTENT_KEY_SEASON_ID</string>
    <string name="season_x">Season %d</string>
    <string name="seasons_h1">Seasons</string>
    <string name="season_and_year">Season %d</string>
    <string name="episodes_and_year">Season %1$d (%2$s)</string>
    <string name="extras_and_year">Extras</string>
    <string name="on_the_air">On The Air</string>
    <string name="pref_key_shows">PREF_KEY_SHOWS_SELECTION</string>
    <string name="today_show">(today)</string>
    <string name="key_nav_selection">NAVIGATION_SELECTION_KEY</string>
    <string name="removed_from_favorites">Removed from your favorites</string>
    <string name="no_shows_favorites">You haven\'t added any shows to your favorites yet!</string>
    <string name="no_movies_favorites">You haven\'t added any movies to your favorites yet</string>
    <string name="search">Search</string>
    <string name="intent_key_tv_show_update">INTENT_KEY_TV_SHOW_NAME</string>
    <string name="intent_key_movie_name">INTENT_KEY_MOVIE_NAME</string>
    <string name="favorites_h1">Favorites</string>
    <string name="favorites_h2">Faves</string>
    <string name="disabled">Disabled</string>
    <string name="search_h1">Search</string>
    <string name="season_poster">Season Poster</string>
    <string name="biography">Biography</string>
    <string name="expand_text">Expand text</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search_for_movies">Movies</string>
    <string name="find_movies">Find Movies</string>
    <string name="find_shows">Find Shows</string>
    <string name="search_movies">Find Movies</string>
    <string name="search_shows">Find Shows</string>
    <string name="type_person">PERSON</string>
    <string name="type_movie">MOVIE</string>
    <string name="type_tv">TV</string>
    <string name="intent_key_cast_id">INTENT_KEY_CAST_ID</string>
    <string name="item_picture">Item Picture</string>
    <string name="tv_show_poster">Tv Show Poster</string>
    <string name="results_for_query">Results for: %s</string>
    <string name="cinematic">Cinematic</string>
    <string name="version_0_1_beta">Version 0.1 (Beta)</string>
    <string name="about">About</string>
    <string name="search_hint">Search for movies, shows and actors</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="INTENT_KEY_TV_SHOW_ITEM">INTENT_KEY_TV_SHOW_ITEM</string>
    <string name="transition_shared_key">LIST_ITEM_SHARED_ELEMENT</string>
    <string name="TRANSITION_KEY_TV_SEASON">TRANSITION_TV_SEASON_POSTER</string>
    <string name="cast">Cast</string>
    <string name="you_might_also_like">You might also like</string>
    <string name="transition_key_show_poster">TRANSITION_SHOW_POSTER</string>
    <string name="intent_transition_enter_mode">INTENT_KEY_ENTER_MODE</string>
    <string name="synopsis">Synopsis</string>
    <string name="original_title">Original Title:</string>
    <string name="type">Type:</string>
    <string name="production">Production:</string>
    <string name="premiere">Premiere:</string>
    <string name="duration">Duration:</string>
    <string name="seasons_meta">Seasons</string>
    <string name="latest_episode_meta">Latest Episode:</string>
    <string name="INTENT_KEY_MOVIE">INTENT_KEY_MOVIE</string>
    <string name="meta_status">Status:</string>
    <string name="runtime_meta">Runtime:</string>
    <string name="budgetmeta">Budget:</string>
    <string name="revenue_meta">Revenue:</string>
    <string name="meta_homepage">Homepage:</string>
    <string name="runtime_min">%dm</string>
    <string name="runtime_full">%1$dh %2$dm</string>


</resources>
