<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1" android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_menu_movies"
            android:checked="false"
            android:icon="@drawable/ic_movie_creation_black_24dp"
            android:title="@string/drawer_menu__movies" />

        <item
            android:id="@+id/drawer_menu_shows"
            android:checked="false"
            android:icon="@drawable/ic_airplay_black_24dp"
            android:title="@string/drawer_menu__tv_shows" />

    </group>


    <group android:id="@+id/group2" android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_menu_search"
            android:checked="false"
            android:title="@string/find_movies"
            android:icon="@drawable/ic_search_white_24dp" />

        <item
            android:id="@+id/drawer_menu_search_shows"
            android:checked="false"
            android:title="@string/find_shows"
            android:icon="@drawable/ic_youtube_searched_for_black_24dp" />

        <item
            android:id="@+id/drawer_menu_faves"
            android:checked="false"
            android:title="@string/action_favorite"
            android:icon="@drawable/ic_star_black_24dp"/>

    </group>

</menu>