<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/detail_screen_gradient"
    android:padding="@dimen/activity_horizontal_margin"
    >

    <Spinner
        android:id="@+id/season_selection_spinner"
        android:theme="@style/ThemeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/select_a_season_to_show_information"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Spinner>

    <TextView
        android:id="@+id/detail_show_season_title"
        tools:text="@string/season_h1_pane"
        android:textColor="#fff"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/season_selection_spinner"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        tools:text="2016"
        android:textColor="#fff"
        android:textSize="18sp"
        android:id="@+id/detail_show_season_meta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_show_season_title"
        app:layout_constraintLeft_toLeftOf="@+id/detail_show_season_title" />

    <TextView
        android:textColor="#fff"
        android:text="@string/divider_dot"
        app:layout_constraintLeft_toRightOf="@+id/detail_show_season_meta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/detail_show_season_meta"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_show_season_meta"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/season_pane_number_seasons"
        android:textSize="18sp"
        android:textColor="#fff"
        tools:text="@string/nr_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/detail_show_season_meta"
         />

    <TextView
        tools:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/detail_show_view_episodes_button"
        android:text="@string/view_episodes"
        android:textColor="#fff"
        style="@style/Widget.AppCompat.Button"
        android:background="#d81f25"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/detail_show_season_meta"
        app:layout_constraintTop_toTopOf="@+id/detail_show_season_meta"
         />


</android.support.constraint.ConstraintLayout>