<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.aaronoe.popularmovies.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:inputType="textAutoComplete"
            android:hint="@string/search_for_movie"
            android:id="@+id/search_edit_text"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            tools:text="Search"
            android:text="@string/action_search"
            android:id="@+id/search_button"
            style="@style/Widget.AppCompat.Button.Colored"
            />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_rv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/search_tv_error_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/search_pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</LinearLayout>
