<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/new_meta_container"
    android:visibility="gone"
    tools:visibility="visible"
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ImageView
        tools:src="@drawable/walking_dead_backdro"
        android:id="@+id/meta_backdrop_iv"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:src="#dd222128"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/about"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/justWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/original_title"
                android:textSize="12sp"
                android:textColor="@color/grey_500"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="The Walking Dead"
                android:id="@+id/meta_title_tv"
                android:textSize="12sp"
                android:textColor="@color/justWhite"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/meta_status"
                android:textSize="12sp"
                android:textColor="@color/grey_500"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="In Production"
                android:id="@+id/meta_status"
                android:textSize="12sp"
                android:textColor="@color/justWhite"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/runtime_meta"
                android:textSize="12sp"
                android:textColor="@color/grey_500"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="1h 30m"
                android:id="@+id/meta_runtime"
                android:textSize="12sp"
                android:textColor="@color/justWhite"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/premiere"
                android:textSize="12sp"
                android:textColor="@color/grey_500"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="October 31, 2014"
                android:id="@+id/meta_release_tv"
                android:textSize="12sp"
                android:textColor="@color/justWhite"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/budgetmeta"
                android:textSize="12sp"
                android:textColor="@color/grey_500"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="74,000,000$"
                android:id="@+id/meta_budget_tv"
                android:textSize="12sp"
                android:textColor="@color/justWhite"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/revenue_meta"
                android:textSize="12sp"
                android:textColor="@color/grey_500"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="74,000,000$"
                android:id="@+id/meta_revenue"
                android:textSize="12sp"
                android:textColor="@color/justWhite"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/meta_homepage"
                android:textSize="12sp"
                android:textColor="@color/grey_500"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                tools:text="www.gooch.com"
                android:id="@+id/meta_homepage"
                android:textSize="12sp"
                android:textColor="@color/justWhite"
                android:linksClickable="true"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>


</FrameLayout>