<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/login_background_iv"
        android:src="@mipmap/loginone"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:id="@+id/login_container"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            android:id="@+id/imageView" />

        <TextView
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="28sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintLeft_toLeftOf="@+id/imageView"
            app:layout_constraintRight_toRightOf="@+id/imageView" />

        <Button
            android:id="@+id/login_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:background="@drawable/transparent_button"
            android:text="@string/login"
            android:textColor="#fff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="64dp"
            android:textSize="16sp"
            android:text="@string/register"
            android:background="@drawable/white_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/login_button"
            app:layout_constraintRight_toRightOf="@+id/login_button"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>